# ml-locale-translate-tool

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  example.en.json
.github/: dependabot.yml
src/: main.rs
