[package]
name = "locale-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.0.5"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-translate = "1.13.0"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.1"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.20"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
