[package]
name = "locale-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-recursion = "1.0.5"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-translate = "1.15.0"
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.1"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
